--- a/favorite-things.html
+++ b/favorite-things.html
@@ -6,8 +6,8 @@
   <body>
     <h1>My favorite things</h1>
     <h2>These are a few of my favorite things</h2>
-    <h3>People</h3>
-    <p>Here are some of my favorite people</p>
+    <p>Here is a link to my favorite <a href="https://www.zsuzsannamangu.com">website.</a> Here you can see my portfolio.</p>
+    <h3>Here are some of my favorite people</h3>
     <ul>
       <li>My brother Robi</li>
       <li>My mom and dad:
@@ -23,8 +23,11 @@
     <p>These are my favorites in order:</p>
     <ol>
       <li>Papayas</li>
+      <img src="img/Papaya.jpeg" alt="This is a picture of a papaya">
       <li>Bananas</li>
+      <img src="img/banana.jpeg" alt="This is a picture of a banana">
       <li>Blueberries</li>
+      <img src="img/blueberries.jpeg" alt="This is a picture of blueberries">
     </ol>
 
     <p>Thanks for reading about me!</p>
