--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <title>Web page #1</title>
   </head>
   <body>
-    <h1>My first webpage</h1>
+    <h1>My <strong>first webpage</strong></h1>
     <h2>Written with the guidance of <em>Epicodus</em></h2>
 
     <p>This is my <strong>first webpage!</strong></p>
@@ -12,7 +12,7 @@
 
     <img src="img/cat.jpg" alt="A photo of a cute cat.">
 
-    <p>Here are some things I'm going to learn about coding:</p>
+    <p>Here are some things I'm <em>going</em> to learn about coding:</p>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
