--- a/my-pet.html
+++ b/my-pet.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>This is a website about my cat!</title>
+    <img src="img/blackcat.jpeg" alt="This is a picture of a black cat">
   </head>
   <body>
-    <h1>Here are my cat's favorite toys</h1>
+    <h4>We adopted him from the <a href="https://www.oregonhumane.org">Oregon Humane Society</a><h4>
+    <h1>Here are my cat's <em>favorite toys</em></h1>
       <ul>
         <li>Feather Toys</li>
         <li>Bells</li>
@@ -13,7 +15,7 @@
     <h2>My Cat's Favorite Places to Sleep</h2>
       <ol>
         <li>My Bed</li>
-        <li>Under the Couch</li>  
+        <li>Under the <strong>Couch</strong></li>
       </ol>
   </body>
 </html>
