--- a/favorite-things.html
+++ b/favorite-things.html
@@ -6,7 +6,7 @@
   <body>
     <h1>My favorite things</h1>
     <h2>These are a few of my favorite things</h2>
-    <p>Here is a link to my favorite <a href="https://www.zsuzsannamangu.com">website.</a> Here you can see my portfolio.</p>
+    <p>Here is a link to my favorite <a href="https://www.google.com">website.</a> I love learning new stuff.</p>
     <h3>Here are some of my favorite people</h3>
     <ul>
       <li>My brother Robi</li>
