--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -22,6 +22,8 @@
 
     <p>Here is a link to my <a href="favorite-things.html"> favorite things</a>.</p>
 
+    <p>Here is a link to my <a href="my-pet.html"> website about my cat</a>.</p>
+
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning programming!</p>
   </body>
 </html>
