--- a/my-pet.html
+++ b/my-pet.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>This is a website about my cat!</title>
+    <h1>This is a Website About My Cat</h1>
     <img src="img/blackcat.jpeg" alt="This is a picture of a black cat">
   </head>
   <body>
