Added a new page about films

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -30,6 +30,7 @@
       <img src="img/blueberries.jpeg" alt="This is a picture of blueberries">
     </ol>
 
+    <p>Here are my favorite <a href="goodfilms.html"> Good Films</a>.</p>
     <p>Thanks for reading about me!</p>
   </body>
 </html>
