add CSS styling

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Web page #1</title>
   </head>
   <body>
@@ -8,14 +9,14 @@
     <h2>Written with the guidance of <em>Epicodus</em></h2>
 
     <p>This is my <strong>first webpage!</strong></p>
-    <p>Isn't it nice?</p>
+    <p id="special">Isn't it nice?</p>
 
     <img src="img/cat.jpg" alt="A photo of a cute cat.">
 
     <p>Here are some things I'm <em>going</em> to learn about coding:</p>
     <ul>
       <li>HTML</li>
-      <li>CSS</li>
+      <li id="special">CSS</li>
       <li>Javascript</li>
       <li>And a lot more!</li>
     </ul>
