correct papaya image file name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>These are my favorites in order:</p>
     <ol>
       <li>Papayas</li>
-      <img src="img/Papaya.jpeg" alt="This is a picture of a papaya">
+      <img src="img/papaya.jpeg" alt="This is a picture of a papaya">
       <li>Bananas</li>
       <img src="img/banana.jpeg" alt="This is a picture of a banana">
       <li>Blueberries</li>
